[package]
name = "phyllo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
tokio-tungstenite = "0.17"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
url = "2.2.2"
tracing = "0.1.34"
