[package]
name = "phyllo"
description = "Websocket-based client for Phoenix channels"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wanderers-nft/phyllo"
categories = ["web-programming::websocket"]
keywords = ["phoenix", "channels", "websocket"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
tokio-tungstenite = { version = "0.17" }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
url = "2.2.2"
tracing = "0.1.35"
thiserror = "1.0.31"
tokio-stream = "0.1.8"
backoff = {version = "0.4.0", features = ["tokio"] }

[dev-dependencies]
anyhow = "1.0.58"

[features]
rustls-tls-native-roots = ["tokio-tungstenite/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["tokio-tungstenite/rustls-tls-webpki-roots"]